--- a/Soal 4.1.1.ipynb
+++ b/Soal 4.1.1.ipynb
@@ -2,35 +2,49 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "550a1ee7-f1d6-4ab0-ad2a-5a769a14913b",
+   "execution_count": 17,
+   "id": "33c5ae67-3ca1-44aa-90cb-a9e6660e483d",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Masukkan suhu tubuh:  36\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "True\n",
-      "False\n",
-      "True\n"
+      "Anda tidak Demam\n"
      ]
     }
    ],
    "source": [
-    "pembelian = 100000\n",
-    "print(pembelian >= 100000)\n",
+    "try:\n",
+    "    suhutubuh = float(input(\"Masukkan suhu tubuh: \"))\n",
     "\n",
-    "pembelian = 45000\n",
-    "print(pembelian >= 100000)\n",
+    "    def pengukuran(suhu):\n",
+    "        if suhu >= 38:\n",
+    "            return \"Anda Demam\"\n",
+    "        else:\n",
+    "            return \"Anda tidak Demam\"\n",
     "\n",
-    "pembelian = 100000\n",
-    "print(pembelian >= 100000)"
+    "    if suhutubuh < 35 or suhutubuh > 42:\n",
+    "        print(\"Suhu tubuh normal manusia 35-42°C. Jika di luar rentang ini, perlu penanganan lebih lanjut.\")\n",
+    "    else:\n",
+    "        x = pengukuran(suhutubuh)\n",
+    "        print(x)\n",
+    "\n",
+    "except ValueError:\n",
+    "    print(\"Input tidak valid. Harap masukkan angka yang valid.\")\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bc4aba1a-e2d3-4051-a383-c87fc85ee945",
+   "id": "2f81d7ab-2920-42c4-99f1-29c8a4959eac",
    "metadata": {},
    "outputs": [],
    "source": []
