--- a/Soal 4.1.2.ipynb
+++ b/Soal 4.1.2.ipynb
@@ -2,44 +2,47 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "3abbdb02-38a9-45f6-9513-2466d6b9ba0b",
+   "execution_count": 3,
+   "id": "c76f58f2-0ca8-4bf8-b4cb-3dcb8d88b0f1",
    "metadata": {},
    "outputs": [
     {
      "name": "stdin",
      "output_type": "stream",
      "text": [
-      "Masukkan usia Anda:  2\n"
+      "Silakan masukkan sebuah bilangan:  -1\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Balita\n"
+      "Bilangan yang dimasukkan bernilai negatif.\n"
      ]
     }
    ],
    "source": [
-    "usia = int(input(\"Masukkan usia Anda: \"))\n",
+    "try:\n",
+    "    angka = int(input(\"Silakan masukkan sebuah bilangan: \"))\n",
     "\n",
-    "if usia >= 60:\n",
-    "    print(\"Lansia\")\n",
-    "elif usia >= 18:\n",
-    "    print(\"Dewasa\")\n",
-    "elif usia >= 13:\n",
-    "    print(\"Remaja\")\n",
-    "elif usia >= 5:\n",
-    "    print(\"Kanak-kanak\")\n",
-    "else:\n",
-    "    print(\"Balita\")"
+    "    def periksa_bilangan(bil):\n",
+    "        if bil < 0:\n",
+    "            return \"Bilangan yang dimasukkan bernilai negatif.\"\n",
+    "        elif bil == 0:  \n",
+    "            return \"Bilangan yang dimasukkan adalah nol.\"\n",
+    "        else:\n",
+    "            return \"Bilangan yang dimasukkan bernilai positif.\"\n",
+    "\n",
+    "    print(periksa_bilangan(angka))\n",
+    "\n",
+    "except ValueError:\n",
+    "    print(\"Input tidak valid. Mohon masukkan bilangan bulat.\")\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5777cb83-0733-4034-86f4-20c878c7cf1d",
+   "id": "47797a24-2859-4676-88fc-78189f46fa97",
    "metadata": {},
    "outputs": [],
    "source": []
