--- a/Soal 4.1.3.ipynb
+++ b/Soal 4.1.3.ipynb
@@ -2,47 +2,56 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "c40a8187-6e9f-460a-815a-f92f28a346d1",
+   "execution_count": 1,
+   "id": "fae0b91c-3d74-41e7-8547-9d9a5ba1b93a",
    "metadata": {},
    "outputs": [
     {
      "name": "stdin",
      "output_type": "stream",
      "text": [
-      "Masukkan usia anda:  dua\n"
+      "Masukkan angka pertama:  1\n",
+      "Masukkan angka kedua:  2\n",
+      "Masukkan angka ketiga:  3\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Input tidak valid! Harap masukkan angka.\n"
+      "Angka terbesar adalah 3.\n"
      ]
     }
    ],
    "source": [
     "try:\n",
-    "    usia_input = input(\"Masukkan usia anda: \")\n",
+    "    satu = int(input(\"Masukkan angka pertama: \"))\n",
+    "    dua = int(input(\"Masukkan angka kedua: \"))\n",
+    "    tiga = int(input(\"Masukkan angka ketiga: \"))\n",
     "\n",
-    "    # Coba konversi input ke integer\n",
-    "    usia = int(usia_input)\n",
+    "    def cari_terbesar(a, b, c):\n",
+    "        angka_unik = set([a, b, c])  # Menghilangkan angka duplikat\n",
+    "        \n",
+    "        if len(angka_unik) == 1:  # Jika semua angka sama\n",
+    "            return \"Semua angka memiliki nilai yang sama.\"\n",
+    "        \n",
+    "        terbesar = max(a, b, c)\n",
+    "        \n",
+    "        if len(angka_unik) == 2:  # Jika ada dua angka yang sama\n",
+    "            return f\"Ada dua angka dengan nilai tertinggi, yaitu {sorted(angka_unik)[-2]}.\"\n",
+    "        \n",
+    "        return f\"Angka terbesar adalah {terbesar}.\"\n",
     "\n",
-    "    if usia < 18:\n",
-    "        print(\"Anda masih anak-anak.\")\n",
-    "    elif usia < 60:\n",
-    "        print(\"Anda adalah orang dewasa.\")\n",
-    "    else:\n",
-    "        print(\"Anda adalah lansia.\")\n",
+    "    print(cari_terbesar(satu, dua, tiga))\n",
     "\n",
     "except ValueError:\n",
-    "    print(\"Input tidak valid! Harap masukkan angka.\")"
+    "    print(\"Masukan tidak valid! Pastikan Anda memasukkan bilangan bulat.\")\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9adae4c4-cc08-418f-9f0d-af04036c6dae",
+   "id": "a38da8ec-aee3-4a60-8deb-16121218b0c4",
    "metadata": {},
    "outputs": [],
    "source": []
